tests/files/success/scope.sol
let x = 0;

{
    let x = 4;
    print("x: ", x);
    let y = x + 1;
    print("y: ", y);
}

let y = x + 1;
print("y: ", y);

