tests/files/fail/not_an_array.sol
let x = "test";
let y = x[0];
